--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Empeek</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="styles.2c472c0cb9885fee4dc6.bundle.css" rel="stylesheet"/></head>
-<body>
-  <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.07c99a8fe449c93136b0.bundle.js"></script><script type="text/javascript" src="polyfills.011af17782fb4ff2f5d2.bundle.js"></script><script type="text/javascript" src="vendor.374589886bd70e8872c4.bundle.js"></script><script type="text/javascript" src="main.e7a7a3bb7babce208844.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Mkess</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.c87f9ac424551b2a1efa.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.3f6f042333799b59849b.bundle.js"></script><script type="text/javascript" src="polyfills.337db143b9a9630c10a6.bundle.js"></script><script type="text/javascript" src="vendor.0e25ca1e5cc7fa4021db.bundle.js"></script><script type="text/javascript" src="main.79a2a5398b63a9bdb9d4.bundle.js"></script></body></html>
